Desktop Layout Done!

--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
             <div class="header">
                 <span id="header-title"> 
                     <a href="https://rupalisrivastava8027.github.io/HindiLearning.com/"> B's Learning Centre </a> 
+                    
+                    <span class="logo">
+                        <img src="Images/Logo.png" alt="logo" width="75" style="margin-left: 30;">
+                    </span>
                 </span>
+
                 
                 <div class="header-nav">
                     <span class="header-nav-link" id="about"> 
                         <a> About </a> 
                     </span>
 
-                    <span class="header-nav-link" id="register"> 
+                    <!-- <span class="header-nav-link" id="register"> 
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSciM_MM5uHKpwamSH-E44_aut5cRMqH_5Wp-Khxk_OL7AXZnw/viewform">Register</a>
-                    </span>
+                    </span> -->
 
                     <span class="header-nav-link" id="contact"> 
                         <a> Contact </a> 
@@ -42,7 +47,7 @@
 
         <div class="home-container">
             <div class="home-image">
-                <img src="Images/home-image.png" alt="Home-Image">
+                <img src="Images/home-image.png" alt="Home-Image" width="450px">
             </div>
 
             <div class="home-sub-container">
@@ -52,8 +57,8 @@
 
                 <div id="home-subtext" data-aos="fade-up" data-aos-duration="1500">
                     <p> 
-                        Ensures learners master Hindi and are <br> prepared for the
-                        Hindi Exam their <br> school offers
+                        Ensures learners master Hindi and are prepared for the
+                        Hindi Exam their school offers
                     </p>
                 </div>
             </div>
