--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <div class="header">
                 <span id="header-title"> 
-                    <a href="https://rupalisrivastava8027.github.io/HindiLearning.com/"> B's Learning Centre </a> 
+                    <a href=""> B's Learning Centre </a> 
                     
                     <span class="logo">
                         <img src="Images/Logo.png" alt="logo" width="75" style="margin-left: 30;">
