--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <!-- Hear from others page -->
     <div class="page" id="hearfromothers-page">
-        <div class="heading">
+        <div class="heading" id="hear-heading">
             Hear from others!
         </div>
 
