--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href=""> B's Learning Centre </a> 
                     
                     <span class="logo">
-                        <img src="Images/Logo.png" alt="logo" width="75" style="margin-left: 30;">
+                        <a href=""> <img src="Images/Logo.png" alt="logo" width="75" style="margin-left: 30;"> </a>
                     </span>
                 </span>
 
@@ -144,17 +144,17 @@
             <div class="comment" style="background-color: #ccd984;">
                 <div class="comment-text" id="commentText3">
                     <p>
-                        My son had a wonderful experience learning Hindi under Ms Bhavana. She is very friendly and patient with the kids. 
-                        As we do not speak Hindi at home, my son needed help to understand many of the new words that come up in the lessons. 
-                        Ms Bhavana has been very patient and helped him understand the meaning of those words.
-                        The classes started on time. The lessons were well structured and of the appropriate level. 
-                        She also gave the kids some practice exercises for the week, which was very helpful. 
-                        On many occasions Ms Bhavana spends extra time with the kids, in case they needed help on a specific topic. She is also very encouraging. 
-                        Her classes were very engaging and my son would always learn something new after each class. We highly recommend Bhavana's Hindi classes. 
+                        My knowledge of Hindi was from studying a few years in school and then the famous Ramayan TV series. 
+                        Over the years, I lost touch. Bhawna started with alphabets and systematically, now 15 classes later, 
+                        I am becoming familiar with the language. Recently, I realized I am even able to pick up some simple dialogues from 
+                        Hindi movies even without waiting for subtitles. I watch movies, try and increase my vocabulary (related to lessons learnt), 
+                        trying to form common sentences that I may need.
+
+                        Hope I am making reasonable progress.
                     </p>
                 </div>
                 <div class="comment-closing">
-                    -Anonymus
+                    -Dr. Sumathi
                     <button class="comment-continue" id="3"> See More </button>
                 </div>
             </div>
@@ -167,22 +167,13 @@
      <!-- Example Videos -->
      <div class="page" id="example-page">
         <div class="heading"> 
-            Example Classes
+            Demo Class
         </div>
 
-        <!-- videos -->
-        <div class="slider">
-            <div class="slides">
-                <video src="Example Videos/example1.mp4" class="slide" controls></video>
-                <video src="Example Videos/example2.mp4" class="slide" controls></video>
-                <video src="Example Videos/example3.mp4" class="slide" controls></video>
-            </div>
-
-            <button class="prev"> &#10094 </button>
-            <button class="next"> &#10095 </button>
-
+        <div class="video">
+            <video src="Example Videos/example2.mp4" controls></video>
         </div>
-     </div>
+    </div>
 
 
      <!-- Contact Page -->
@@ -200,7 +191,7 @@
             </div>
             <div class="contact-info">
                 <div> bhawnchhatwal@gmail.com </div>
-                <br> <br>
+                <br>
                 <div> +1 (269)-408-6606 </div>
             </div>
 
