--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
             
         </div>
 
+        <br> <br>
+
     </div>
 
     <!-- Hear from others page -->
@@ -175,6 +177,22 @@
         </div>
     </div>
 
+
+    <div class="page" id="resources-page">
+        <div class="heading">
+            Resources
+        </div>
+
+        <br>
+
+        <div class="link">
+            <a href="https://google.com"> 
+                <h1 style="color: #000f48;"> Hindi Learning Resources </h1>
+            </a>
+        </div>
+        <br> <br> <br>
+
+    </div>
 
      <!-- Contact Page -->
       <div class="page" id="contact-page">
