--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
         <br> <br>
 
-        <div id="home-title" data-aos="fade-right" data-aos-duration="1000"> <h1> Learn Hindi the easy way </h1> </div>
+        <div id="home-title" data-aos="fade-right" data-aos-duration="1000"> <h1 id="title"> Learn Hindi </h1> </div>
 
 
         <div class="home-container">
@@ -177,7 +177,7 @@
         </div>
     </div>
 
-
+    <!-- Resources Page -->
     <div class="page" id="resources-page">
         <div class="heading">
             Resources
@@ -186,7 +186,7 @@
         <br>
 
         <div class="link">
-            <a href="https://google.com"> 
+            <a href="https://docs.google.com/document/d/1Yw6VBW-_RP29ysS9bOvU2CFcQ-krnUzszJB4eMSTFts/edit"> 
                 <h1 style="color: #000f48;"> Hindi Learning Resources </h1>
             </a>
         </div>
@@ -216,6 +216,10 @@
             <div class="logo">
                 <img src="Images/Logo.png" alt="logo">
             </div>
+        </div>
+
+        <div class="contact-credits">
+            <p> Website designed and developed by Aarush Srivastava (Rising Junior) </p>
         </div>
 
       </div>
