--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
         <div class="contact-container">
             <div class="contact-social-media">
                 <span class="contact-facebook">
-                    <a> <img src="Images/facebook_logo.png" alt="Facebook" style="height: 50px; margin-bottom: 40px;"> </a>
+                    <a href="https://www.facebook.com/share/LZ1Hym1wnesXL4gC/?mibextid=LQQJ4d"> <img src="Images/facebook_logo.png" alt="Facebook" style="height: 50px; margin-bottom: 40px;"> </a>
                 </span>
 
                 <span class="contact-instagram">
-                    <a> <img src="Images/instagram_logo.png" alt="Instagram" style="height: 50px; margin-top: 40px;"> </a>
+                    <a href="https://www.instagram.com/b_chhatwal/profilecard/?igsh=MWp4c2Nnem9wZHc5dg=="> <img src="Images/instagram_logo.png" alt="Instagram" style="height: 50px; margin-top: 40px;"> </a>
                 </span>
             </div>
             <div class="contact-info">
