--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <br>
 
         <div class="link">
-            <a href="https://docs.google.com/document/d/1Yw6VBW-_RP29ysS9bOvU2CFcQ-krnUzszJB4eMSTFts/edit"> 
+            <a href="https://drive.google.com/drive/u/3/folders/100m2nPN1Pbjq-y4TWrg_ix8SvRZUaNuW"> 
                 <h1 style="color: #000f48;"> Hindi Learning Resources </h1>
             </a>
         </div>
